优化代码，添加oss阿里云存储 首先添加阿里云存储jar包配置pom.xml, OssConfiguration创建OSSClient实例, OssClientUtil提供文件存储的工具类, 约定了UUID_文件名; 约定了hash文件目录;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ jdbc.password=root
 mybatis_config_file_path=mybatis-config.xml
 mapper_path=/mapper/**.xml
 entity_package=com.hym.wxtest.entity
+
+# aliyun-oos的配置
+oos.endpoint=oss-cn-hangzhou.aliyuncs.com
+oos.access_key_id=LTAI7n6yAZA0qQlE
+oos.access_key_secret=E4rLWyPA4Jem18LhGnTrhBTXG2Rwkl
+oos.bucket_name=hymbucket
+oos.file_dir=oss-upload
