--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,30 @@ oos.access_key_id=LTAI7n6yAZA0qQlE
 oos.access_key_secret=E4rLWyPA4Jem18LhGnTrhBTXG2Rwkl
 oos.bucket_name=hymbucket
 oos.file_dir=oss-upload
+
+# qq邮箱的配置
+mail.protocol_key=mail.transport.protocol
+mail.protocol_value=smtp
+mail.host_key=mail.smtp.host
+mail.host_value=smtp.qq.com
+mail.starttls_enable_key=mail.smtp.starttls.enable
+mail.starttls_enable_value=true
+mail.auth_key=mail.smtp.auth
+mail.auth_value=true
+mail.debug_key=mail.debug
+mail.debug_value=false
+mail.user=1305487652@qq.com
+mail.password=fjglvehjwzuvbade
+mail.from_nickname=韩英明
+
+# 配置Redis
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=localhost
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接超时时间（毫秒）
+spring.redis.timeout=3000ms
