--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.0.1.RELEASE</version>
+		</dependency>
+
+		<!--添加fastjson解析JSON数据-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.16</version>
 		</dependency>
 
 	</dependencies>
